<resources>
    <string name="app_name">SpeakSure</string>
    <string name="register">Register</string>
    <string name="selamat_dat">Welcome To SpeakSure</string>
    <string name="label">Name</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="back_login">Back To login</string>
    <string name="back_register">Ke halaman register</string>
    <string name="login">Login</string>
    <string name="selamat_kem">Welcome Back</string>
    <string name="profile">Profile</string>
    <string name="add_new_thread">Add New Thread</string>
    <string name="home">Home</string>
    <string name="to_homepage">ke halaman homepage</string>
    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbar_hint">Cari</string>
    <string name="title">Bangkit Student</string>
    <string name="date">23 February 2023</string>
    <string name="time">09.00,</string>
    <string name="caption">Hari hariku menyenangkan \n yey \n hore</string>
    <string name="content_description_media">ini kontent</string>
    <string name="JumlahUp">94rb</string>
    <string name="jumlah_comment">100rb</string>
    <string name="duration">01:00</string>
    <string name="all">All</string>
    <string name="politics">Politics</string>
    <string name="games">Games</string>
    <string name="anime">Anime</string>
    <string name="k_pop">K-Pop</string>
    <string name="sport">Sport</string>
    <string name="logout">Logout</string>
    <string name="image">image</string>
    <string name="comment">Comment :</string>
    <string name="thread">Thread :</string>
    <string name="_1_s_thread">%1$s Thread</string>
    <string name="_1_s_comment">%1$s Comment</string>
    <string name="_1_s_email">Logged in as %1$s</string>
    <string name="_1_s_greeting">Hi, im %1$s</string>
    <string name="username">Username</string>
    <string name="upload">Upload</string>
    <string name="attach">Attach Voice</string>
    <string name="play">Play Voice</string>
    <string name="record">Record Voice</string>
    <string name="masukkan_teks">Masukkan teks</string>
    <string name="stop_record">Stop Record</string>
    <string name="delete_voice">Delete Voice</string>
    <string name="titlethread">Title</string>
    <string name="description">Description</string>
    <string name="recorded_voice">Recorded Voice</string>
    <string name="back_to_register">Back To Register</string>
    <string name="warning_text">Your thread contains toxic words. \nImmediately fix your post.</string>
    <string name="warning_header"><font size="20"><b>Warning!</b></font></string>
    <string name="return_"><b>Return</b></string>
</resources>