<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">


    <!--<fragment
        android:id="@+id/navigation_home"
        android:name="com.example.speaksure_capstone.dashboard.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_add_thread"
        android:name="com.example.speaksure_capstone.addthread.AddThreadFragment"
        android:label="@string/add_new_thread"
        tools:layout="@layout/fragment_add_thread" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.speaksure_capstone.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />-->

    <activity
        android:id="@+id/navigation_home"
        android:name="com.example.speaksure_capstone.dashboard.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/activity_home"/>

    <activity
        android:id="@+id/navigation_add_thread"
        android:name="com.example.speaksure_capstone.addthread.AddThreadFragment"
        android:label="@string/add_new_thread"
        tools:layout="@layout/activity_add_thread" />

    <activity
        android:id="@+id/navigation_profile"
        android:name="com.example.speaksure_capstone.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />



</navigation>