<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/profileFragment"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_above="@+id/card"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="5dp"
            android:backgroundTint="@color/md_theme_light_error"
            android:fontFamily="@font/poppins"
            android:text="@string/logout" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="wrap_content"
            android:layout_height="370dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            card_view:strokeColor="@color/md_theme_light_outline"
            card_view:strokeWidth="1dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="0dp"
                android:layout_marginBottom="0dp">

                <ImageView
                    android:id="@+id/iv_photoprofile"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="120dp"
                    android:src="@drawable/ic_baseline_account_circle_24" />

                <TextView
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_photoprofile"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-2dp"
                    android:fontFamily="@font/poppins"
                    android:text="@string/username"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/btn_play_thread"
                    style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_introduction"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="100dp"
                    android:backgroundTint="@color/seed"
                    android:text="@string/duration"
                    android:textColor="@color/md_theme_light_onPrimary"
                    app:icon="@drawable/ic_play_arrow_fill0_wght400_grad0_opsz48"
                    app:iconTint="@color/md_theme_light_onPrimary" />

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_thread"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/comment" />

                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_comment"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/_1_s_email" />

                <TextView
                    android:id="@+id/tv_jlh_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_jlh_thread"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/_1_s_comment" />

                <TextView
                    android:id="@+id/tv_introduction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_email"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/_1_s_greeting" />

                <TextView
                    android:id="@+id/tv_thread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Name"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/thread" />

                <TextView
                    android:id="@+id/tv_jlh_thread"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/Name"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="110dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/_1_s_thread" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>

</FrameLayout>