<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:id="@+id/card"
    card_view:strokeColor="@color/md_theme_dark_secondary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_thread"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_photoprofile"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/image"
                android:scaleType="centerCrop"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="1.0"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                card_view:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginStart="15dp"
                card_view:layout_constraintStart_toEndOf="@id/iv_photoprofile"
                card_view:layout_constraintHorizontal_bias="0.71"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.428" />

            <TextView
                android:id="@+id/time_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="4dp"
                android:text="@string/time"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                card_view:layout_constraintStart_toEndOf="@+id/iv_photoprofile"
                card_view:layout_constraintTop_toBottomOf="@id/Name" />

            <TextView
                android:id="@+id/date_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                card_view:layout_constraintStart_toEndOf="@+id/time_thread"
                card_view:layout_constraintTop_toBottomOf="@+id/Name" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="369dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/caption"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Media -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="194dp"
            app:srcCompat="@drawable/ic_baseline_insert_photo_24"
            android:scaleType="centerCrop"
            android:contentDescription="@string/content_description_media" />



        <!-- Buttons -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_up"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/cardview_light_background"
                android:src="@drawable/ic_baseline_arrow_drop_up_24"
                android:contentDescription="@string/image"/>

            <com.google.android.material.button.MaterialButton
                style="?attr/borderlessButtonStyle"
                android:layout_width="55dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/JumlahUp" />

            <ImageButton
                android:id="@+id/btn_down"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/cardview_light_background"
                android:src="@drawable/ic_baseline_arrow_drop_down_24"
                android:contentDescription="@string/image"/>

            <ImageButton
                android:id="@+id/btn_comment"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/cardview_light_background"
                android:src="@drawable/ic_chat_bubble_fill0_wght400_grad0_opsz48"
                android:contentDescription="@string/image"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="65dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="0dp"
                android:text="@string/jumlah_comment"
                style="?attr/borderlessButtonStyle"
                />

            <Button
                style="@style/Widget.Material3.Button.ElevatedButton.Icon"
                android:id="@+id/btn_play_thread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:backgroundTint="@color/seed"
                android:textColor="@color/md_theme_light_onPrimary"
                app:icon="@drawable/ic_play_arrow_fill0_wght400_grad0_opsz48"
                app:iconTint="@color/md_theme_light_onPrimary"
                android:text="@string/duration"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
