<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/purple_200">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:lineSpacingExtra="2sp"
        android:text="@string/register"
        android:textAppearance="@style/register"
        android:translationY="-1.11sp" />

    <TextView
        android:id="@+id/selamat_dat"
        android:layout_width="239dp"
        android:layout_height="19dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="108dp"
        android:fontFamily="@font/poppins"
        android:gravity="top"
        android:lineSpacingExtra="-5sp"
        android:text="@string/selamat_dat"
        android:textAppearance="@style/selamat_dat" />

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label"
        android:width="380dp"
        android:height="56dp"
        android:viewportWidth="380"
        android:viewportHeight="56"
        android:strokeWidth="2"
        android:strokeColor="#1C1B1F"
        android:fillColor="#E7E0EC"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="-355dp"
        app:startIconDrawable="@drawable/ic_baseline_person_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:viewportWidth="380"
            android:viewportHeight="56" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:inputType="textEmailAddress"
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_email"
        android:width="380dp"
        android:height="56dp"
        android:viewportWidth="380"
        android:viewportHeight="56"
        android:strokeWidth="2"
        android:strokeColor="#1C1B1F"
        android:fillColor="#E7E0EC"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="270dp"
        android:layout_marginBottom="-355dp"
        app:startIconDrawable="@drawable/ic_baseline_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:viewportWidth="380"
            android:viewportHeight="56" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="?attr/textInputFilledStyle"
        android:inputType="textPassword"
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_password"
        android:width="380dp"
        android:height="56dp"
        android:viewportWidth="380"
        android:viewportHeight="56"
        android:strokeWidth="2"
        android:strokeColor="#1C1B1F"
        android:fillColor="#E7E0EC"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="340dp"
        android:layout_marginBottom="-355dp"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:viewportWidth="380"
            android:viewportHeight="56" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_register"
        style="@style/Widget.Material3.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="420dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/purple_500"
        android:text="@string/register"
        android:textColor="@color/black" />

</RelativeLayout>